# vcxproj

./: .gitignore  CMakeLists.txt
cmake/: Findtinyxml2.cmake
include/: project.h
include/vcxproj/: solution.h  utils.h
src/: project.cpp  solution.cpp
